# SleePi

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  index.md
SleePi/: Build_and_run_Windows.bat  CMakeLists.txt  build_and_run_linux.sh  run_sleepi_linux.sh
SleePi/include/: config.h  play_audio.h
SleePi/src/: SleePi.cpp  play_audio.cpp
Webcam test/: BuildWindows.bat  Build_and_run_Windows.bat  CMakeLists.txt  head pose estimation.cpp  main.cpp  play_audio.cpp
tests/Camera test/: CMakeLists.txt  main.cpp
tests/EAR test/: main.cpp
tests/Facial Landmarks Test/: CMakeLists.txt  main.cpp
tests/Sound test/: CMakeLists.txt  main.cpp  play_audio.cpp
